--- a/search-style.css
+++ b/search-style.css
@@ -6,4 +6,22 @@
     height: 35px;
     width: 400px;
     border: 1px solid;
+    z-index: -1;
+
+}
+
+.right_button {
+    background-color: white;
+    color: black;
+    position: absolute;
+    top: 30px;
+    right: 100px;
+}
+
+.left_button {
+    background-color: white;
+    color: black;
+    position: absolute;
+    top: 30px;
+    right: 170px;
 }
